// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyForm 1`] = `
<form>
  <div
    class="form-row"
  >
    <div
      class="form-group col-md-6"
    >
      <label
        class="col-form-label"
        for="inputEmail4"
      >
        Email
      </label>
      <input
        class="form-control"
        id="inputEmail4"
        name="email"
        placeholder="Email"
        type="email"
        value=""
      />
    </div>
    <div
      class="form-group col-md-6"
    >
      <label
        class="col-form-label"
        for="inputPassword4"
      >
        Password
      </label>
      <input
        class="form-control"
        id="inputPassword4"
        name="password"
        placeholder="Password"
        type="password"
        value=""
      />
    </div>
  </div>
  <div
    class="form-group"
  >
    <label
      class="col-form-label"
      for="inputAddress"
    >
      Address
    </label>
    <textarea
      class="form-control"
      id="inputAddress"
      name="address"
      placeholder="1234 Main St"
      type="text"
    />
  </div>
  <div
    class="form-row"
  >
    <div
      class="form-group col-md-6"
    >
      <label
        class="col-form-label"
        for="inputCity"
      >
        City
      </label>
      <input
        class="form-control"
        id="inputCity"
        name="city"
        type="text"
        value=""
      />
    </div>
    <div
      class="form-group col-md-6"
    >
      <label
        class="col-form-label"
        for="inputCountry"
      >
        Country
      </label>
      <select
        class="form-control"
        id="inputCountry"
        name="country"
      >
        <option>
          Choose
        </option>
        <option
          value="argentina"
        >
          Argentina
        </option>
        <option
          value="russia"
        >
          Russia
        </option>
        <option
          value="china"
        >
          China
        </option>
      </select>
    </div>
  </div>
  <div
    class="form-group"
  >
    <div
      class="form-check"
    >
      <label
        class="form-check-label"
        for="rules"
      >
        <input
          class="form-check-input"
          id="rules"
          name="acceptRules"
          type="checkbox"
        />
        Accept Rules
      </label>
    </div>
  </div>
  <button
    class="btn btn-primary"
    type="submit"
  >
    Sign in
  </button>
</form>
`;

exports[`MyForm 2`] = `
<div>
  <button
    type="button"
  >
    Back
  </button>
  <table
    class="table"
  >
    <tbody>
      <tr>
        <td>
          acceptRules
        </td>
        <td>
          false
        </td>
      </tr>
      <tr>
        <td>
          address
        </td>
        <td />
      </tr>
      <tr>
        <td>
          city
        </td>
        <td />
      </tr>
      <tr>
        <td>
          country
        </td>
        <td />
      </tr>
      <tr>
        <td>
          email
        </td>
        <td />
      </tr>
      <tr>
        <td>
          password
        </td>
        <td />
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`MyForm 3`] = `
<form>
  <div
    class="form-row"
  >
    <div
      class="form-group col-md-6"
    >
      <label
        class="col-form-label"
        for="inputEmail4"
      >
        Email
      </label>
      <input
        class="form-control"
        id="inputEmail4"
        name="email"
        placeholder="Email"
        type="email"
        value=""
      />
    </div>
    <div
      class="form-group col-md-6"
    >
      <label
        class="col-form-label"
        for="inputPassword4"
      >
        Password
      </label>
      <input
        class="form-control"
        id="inputPassword4"
        name="password"
        placeholder="Password"
        type="password"
        value=""
      />
    </div>
  </div>
  <div
    class="form-group"
  >
    <label
      class="col-form-label"
      for="inputAddress"
    >
      Address
    </label>
    <textarea
      class="form-control"
      id="inputAddress"
      name="address"
      placeholder="1234 Main St"
      type="text"
    />
  </div>
  <div
    class="form-row"
  >
    <div
      class="form-group col-md-6"
    >
      <label
        class="col-form-label"
        for="inputCity"
      >
        City
      </label>
      <input
        class="form-control"
        id="inputCity"
        name="city"
        type="text"
        value=""
      />
    </div>
    <div
      class="form-group col-md-6"
    >
      <label
        class="col-form-label"
        for="inputCountry"
      >
        Country
      </label>
      <select
        class="form-control"
        id="inputCountry"
        name="country"
      >
        <option>
          Choose
        </option>
        <option
          value="argentina"
        >
          Argentina
        </option>
        <option
          value="russia"
        >
          Russia
        </option>
        <option
          value="china"
        >
          China
        </option>
      </select>
    </div>
  </div>
  <div
    class="form-group"
  >
    <div
      class="form-check"
    >
      <label
        class="form-check-label"
        for="rules"
      >
        <input
          class="form-check-input"
          id="rules"
          name="acceptRules"
          type="checkbox"
        />
        Accept Rules
      </label>
    </div>
  </div>
  <button
    class="btn btn-primary"
    type="submit"
  >
    Sign in
  </button>
</form>
`;

exports[`MyForm 4`] = `
<div>
  <button
    type="button"
  >
    Back
  </button>
  <table
    class="table"
  >
    <tbody>
      <tr>
        <td>
          acceptRules
        </td>
        <td>
          true
        </td>
      </tr>
      <tr>
        <td>
          address
        </td>
        <td />
      </tr>
      <tr>
        <td>
          city
        </td>
        <td>
          MyCity
        </td>
      </tr>
      <tr>
        <td>
          country
        </td>
        <td />
      </tr>
      <tr>
        <td>
          email
        </td>
        <td>
          test@email.com
        </td>
      </tr>
      <tr>
        <td>
          password
        </td>
        <td>
          mysuperpass
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`MyForm 5`] = `
<form>
  <div
    class="form-row"
  >
    <div
      class="form-group col-md-6"
    >
      <label
        class="col-form-label"
        for="inputEmail4"
      >
        Email
      </label>
      <input
        class="form-control"
        id="inputEmail4"
        name="email"
        placeholder="Email"
        type="email"
        value="test@email.com"
      />
    </div>
    <div
      class="form-group col-md-6"
    >
      <label
        class="col-form-label"
        for="inputPassword4"
      >
        Password
      </label>
      <input
        class="form-control"
        id="inputPassword4"
        name="password"
        placeholder="Password"
        type="password"
        value="mysuperpass"
      />
    </div>
  </div>
  <div
    class="form-group"
  >
    <label
      class="col-form-label"
      for="inputAddress"
    >
      Address
    </label>
    <textarea
      class="form-control"
      id="inputAddress"
      name="address"
      placeholder="1234 Main St"
      type="text"
    />
  </div>
  <div
    class="form-row"
  >
    <div
      class="form-group col-md-6"
    >
      <label
        class="col-form-label"
        for="inputCity"
      >
        City
      </label>
      <input
        class="form-control"
        id="inputCity"
        name="city"
        type="text"
        value="MyCity"
      />
    </div>
    <div
      class="form-group col-md-6"
    >
      <label
        class="col-form-label"
        for="inputCountry"
      >
        Country
      </label>
      <select
        class="form-control"
        id="inputCountry"
        name="country"
      >
        <option>
          Choose
        </option>
        <option
          value="argentina"
        >
          Argentina
        </option>
        <option
          value="russia"
        >
          Russia
        </option>
        <option
          value="china"
        >
          China
        </option>
      </select>
    </div>
  </div>
  <div
    class="form-group"
  >
    <div
      class="form-check"
    >
      <label
        class="form-check-label"
        for="rules"
      >
        <input
          checked=""
          class="form-check-input"
          id="rules"
          name="acceptRules"
          type="checkbox"
        />
        Accept Rules
      </label>
    </div>
  </div>
  <button
    class="btn btn-primary"
    type="submit"
  >
    Sign in
  </button>
</form>
`;
